src/objects/MemberPlan.object
<CustomObject>
    <fields>
        <fullName>AutoNumbers__c</fullName>
        <displayFormat>MP-{0}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coverage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Member.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Member.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <formula>Member.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_Indicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Member</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>if((EffectiveFrom &lt;= TODAY() &amp;&amp; EffectiveTo &gt;= TODAY() ) , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Alliance_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategic Alliance Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>asOfDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>primaryMemberConsumerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Member Consumer Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_MemberPlans</fullName>
        <filterScope>Everything</filterScope>
        <label>All Member Plans</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>